<resources>
    <string name="app_name">Drink</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="drink">Drink</string>
    <string name="email_address"> Email Address</string>
    <string name="password"> Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="logo">Icon made by fjstudio from www.flaticon.com.</string>
    <string name="welcome">Welcome!</string>
    <string name="first_name"> First Name</string>
    <string name="last_name"> Last Name</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="information">I need some information to figure out your daily water intake</string>
    <string name="weight_kg">Weight [kg]</string>
    <string name="activity_minutes_per_day">Activity [minutes per day]</string>
    <string name="save">Save</string>
    <string name="iconAttr1">Icon made by Freepik from www.flaticon.com.</string>
    <string name="incorrect_credentials">Incorrect credentials!</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello">Hello, </string>
    <string name="reset_password">Reset password</string>
    <string name="today_s_water_intake">Today\'s water intake</string>
    <string name="_250ml">+250ml</string>
    <string name="_750ml">+750ml</string>
    <string name="_500ml">+500ml</string>
    <string name="to_reach_target">To reach target:</string>
    <string name="target">Target:</string>
    <string name="date">Date:</string>
    <string name="quantity">Quantity:</string>
    <string name="delete_account">Delete Account</string>
</resources>