<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".InfoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/iconAttr1"
        android:src="@drawable/drop"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/speak_bubble"
        android:fontFamily="@font/delius"
        android:padding="2dp"
        android:paddingStart="20dp"
        android:paddingEnd="2dp"
        android:text="@string/information"
        android:textColor="@color/charcoal"
        android:textSize="20sp"
        app:fontFamily="@font/delius"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineMid"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="email@yahoo.com"
        android:background="@drawable/rounded_square"
        android:hint="@string/weight_kg"
        android:inputType="number"
        android:padding="5dip"
        android:textColor="@color/charcoal"
        android:textColorHint="@color/aliceBlue"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <EditText
        android:id="@+id/activity_minutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="email@yahoo.com"
        android:background="@drawable/rounded_square"
        android:hint="@string/activity_minutes_per_day"
        android:inputType="number"
        android:padding="5dip"
        android:textColor="@color/charcoal"
        android:textColorHint="@color/aliceBlue"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal3" />

    <TextView
        android:id="@+id/incomplete_info"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="visible"
        android:text="@string/please_fill_in_all_the_fields"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/activity_minutes"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideHorizontal4" />

</androidx.constraintlayout.widget.ConstraintLayout>